# mcp

./: CLAUDE.md  README.md  doc.md  pyproject.toml  run.md
src/mcp_server/: __init__.py  __main__.py  server.py
src/mcp_server/tools/: github.py  read.py  search.py
tests/: test_github.py  test_read.py  test_search.py  test_server.py
